[gd_scene load_steps=6 format=2]

[ext_resource path="res://Images/Enemies/NewEnemy.png" type="Texture" id=1]
[ext_resource path="res://Scripts/EnemyScript/Enemy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 6.5 )

[sub_resource type="Animation" id=3]
resource_name = "Idle"

[sub_resource type="Animation" id=4]
resource_name = "destroy"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Enemy" type="Area2D" groups=["enemies"]]
collision_layer = 8
collision_mask = 7
script = ExtResource( 2 )
hp = 100.0
points_on_death = 1000

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3.5 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 3 )
anims/destroy = SubResource( 4 )

[node name="Tween" type="Tween" parent="."]

[node name="DiveDelay" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[node name="MachineGun" type="Node2D" parent="."]

[node name="PointOne" type="Position2D" parent="MachineGun"]
position = Vector2( -11, 8 )

[node name="PointTwo" type="Position2D" parent="MachineGun"]
position = Vector2( 11, 8 )

[node name="BehaviorTimer" type="Timer" parent="MachineGun"]
wait_time = 1.55

[connection signal="area_entered" from="." to="." method="_on_Enemy_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="timeout" from="DiveDelay" to="." method="_on_DiveDelay_timeout"]
[connection signal="timeout" from="MachineGun/BehaviorTimer" to="." method="_on_BehaviorTimer_timeout"]
